# N-Puzzle

./: CMakeLists.txt  Makefile  README.md  puzzle_4_1.txt
graphics/: main.cpp
puzzles/: puzzle_10_1.txt  puzzle_3_1.txt  puzzle_3_2.txt  puzzle_3_4.txt  puzzle_4_2.txt  puzzle_4_4.txt
srcs/: Board.cpp  Board.hpp  main.cpp
srcs/algorithm/: AStar.cpp  AStar.hpp  Heuristics.hpp  SearchAlgorithm.hpp  Strategy.hpp
srcs/app/: game.cpp  main.cpp
srcs/graphics/: Assets.hpp  Game.hpp  Graphics.hpp  Page.hpp  Visualizer.hpp  main.cpp
srcs/models/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Puzzle.cpp  Puzzle.hpp
srcs/resources/: npuzzle-gen.py
srcs/resources/puzzles/: puzzle_3_3.txt  puzzle_4_3.txt  puzzle_4_5.txt  puzzle_4_6.txt  puzzle_5_1.txt  puzzle_5_2.txt
srcs/utility/: parse.cpp  print.cpp  solve.cpp  utility.hpp
